--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,6 @@
     <string name="app_name">Design Your Jersey</string>
     <string name="action_settings">Settings</string>
     <string name="action_edit">Edit</string>
+    <string name="name_default">Android</string>
+    <string name="number_default">17</string>
 </resources>
