--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,8 @@
 <resources>
     <string name="app_name">Design Your Jersey</string>
+    <string name="jersey_picture">Jersey picture</string>
     <string name="action_settings">Settings</string>
     <string name="action_edit">Edit</string>
-    <string name="name_default">Android</string>
-    <string name="number_default">17</string>
+    <string name="jersey_name_default">Android</string>
+    <string name="jersey_number_default">17</string>
 </resources>
