--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,10 +4,17 @@
     <string name="action_settings">Settings</string>
     <string name="action_edit">Edit</string>
     <string name="action_reset">RESET</string>
+    <string name="action_undo">Undo</string>
+    <string name="jersey_name_hint">Player Name</string>
     <string name="jersey_name_default">Android</string>
+    <string name="jersey_number_hint">Player Number</string>
     <string name="jersey_number_default">17</string>
     <string name="jersey_title_dialog">Update Jersey Info</string>
     <string name="jersey_name_dialog">Name</string>
     <string name="jersey_number_dialog">Number</string>
     <string name="jersey_color_dialog">Color</string>
+    <string name="confirmation_dialog_reset">Are you sure you want to reset the layout?</string>
+    <string name="confirmation_snack_reset">Layout is reset</string>
+    <string name="confirmation_snack_restored">Layout restored</string>
+
 </resources>
